cluster/apps/default/gameserver/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameserver
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
kind: Endpoints
apiVersion: v1
metadata:
  name: gameserver
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.233
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameserver
  namespace: default
spec:
  rules:
    - host: gaming.stiforr.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gameserver
                port:
                  number: 80
